fixes for subscription mobile view details

--- a/newmagento/skin/frontend/gryphon/gryphon_theme/css/less/mobile-style.less
+++ b/newmagento/skin/frontend/gryphon/gryphon_theme/css/less/mobile-style.less
@@ -4319,7 +4319,7 @@ html{
 @media (max-width: 991px) {
   #shopping-cart-table {
     tbody tr td {      
-      vertical-align: middle!important;      
+      vertical-align: top!important;      
     }
   }
 }
@@ -4656,10 +4656,12 @@ html{
 
                 .image-text-container{
                   height: auto;
+                  margin-top: 20px;
                 }
                 .last-image-text-container{
                   padding-top: 8px;
                   display: block;
+                  margin: 0px;
                 }
                 .image-text-container .delete{
                   color: @dark-grey;
@@ -4738,7 +4740,7 @@ html{
             // top: 0;
             // left: 0;
             display: inline-block;
-            vertical-align: middle;
+            vertical-align: top;
             height: auto;
             width: 76px - 20px;
             // height: 96px;
