--- a/newmagento/skin/frontend/gryphon/gryphon_theme/css/style.css
+++ b/newmagento/skin/frontend/gryphon/gryphon_theme/css/style.css
@@ -2229,7 +2229,6 @@ div.product .main-product .product-content .grouped-items .row .row .order-qty .
   display: inline-block;
   vertical-align: top;
   margin-left: -3px;
-  margin-top: 1px;
   margin-right: -4px;
   padding: 0 5px;
   font-family: "minion-pro", Verdana, sans-serif;
@@ -2244,6 +2243,7 @@ div.product .main-product .product-content .grouped-items .row .row .order-qty a
   display: inline-block;
   text-align: center;
   font-size: 9px;
+  vertical-align: top;
 }
 div.product .main-product .product-content .grouped-items .row .row .order-qty a.minus i {
   color: #ffffff;
@@ -2255,6 +2255,7 @@ div.product .main-product .product-content .grouped-items .row .row .order-qty a
   display: inline-block;
   text-align: center;
   font-size: 9px;
+  vertical-align: top;
 }
 div.product .main-product .product-content .grouped-items .row .row .order-qty a.plus i {
   color: #ffffff;
@@ -4812,7 +4813,7 @@ div.product .product-review .image-text-content .write-review .rating-wrapper .s
 }
 @media all and (max-width: 992px) {
   .sign-up {
-    margin-top: 60px;
+    margin-top: 83px!important;
     padding-bottom: 90px!important;
   }
 }
@@ -4875,6 +4876,34 @@ div.product .product-review .image-text-content .write-review .rating-wrapper .s
   color: #ffffff;
   max-width: 500px;
   margin: 0 auto;
+}
+@media all and (max-width: 992px) {
+  .sign-up .signup-banner .image-text-content .caption-container {
+    display: block;
+    height: 225px;
+  }
+  .sign-up .signup-banner .image-text-content .caption-container .caption {
+    height: 225px;
+    text-align: center;
+    color: #ffffff;
+    display: block;
+    padding-top: 22px;
+  }
+  .sign-up .signup-banner .image-text-content .caption-container .caption h1 {
+    font-size: 21px;
+    line-height: 22px;
+    margin-bottom: 17px;
+  }
+  .sign-up .signup-banner .image-text-content .caption-container .caption p {
+    color: #ffffff;
+    font-family: 'Gotham-Medium', Verdana, sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 10px;
+    line-height: 15px;
+    padding: 0 30px;
+    max-width: none;
+  }
 }
 .sign-up .main-content {
   margin-top: 60px;
@@ -10735,7 +10764,7 @@ div.product .product-review .image-text-content .write-review .rating-wrapper .s
 }
 @media all and (max-width: 992px) {
   .trade .last-content .steps {
-    margin-top: 35px;
+    margin-top: 2px;
     margin-left: 0px;
   }
 }
@@ -11432,7 +11461,7 @@ div#footer-wrapper .search span.ajax_msg {
 }
 .our-story .main-content .first-content .milestones .milestone-container {
   font-size: 0;
-  width: 10000px;
+  width: 30000px;
   text-align: left;
   position: absolute;
   top: 0px;
@@ -12514,6 +12543,7 @@ div#footer-wrapper .search span.ajax_msg {
 .contact-us #contact-us-form .each-input textarea {
   width: 280px;
   height: 160px;
+  resize: none;
 }
 .contact-us #contact-us-form .each-input .dropdown-container {
   width: 281px;
@@ -13986,6 +14016,10 @@ div#footer-wrapper .search span.ajax_msg {
   margin: 0 auto;
   display: block;
 }
+.discover .main-content .third-content-gift .cta-container {
+  font-size: 0;
+  text-align: center;
+}
 .discover .main-content .third-content-gift .gift-cart-button {
   font-family: 'Gotham-Medium', Verdana, sans-serif;
   font-weight: 200;
@@ -13998,13 +14032,16 @@ div#footer-wrapper .search span.ajax_msg {
   border: none;
   text-transform: none;
   text-align: center;
-  display: block;
-  margin: 0 auto;
+  display: inline-block;
+  vertical-align: top;
   width: 214px;
   cursor: pointer;
 }
 .discover .main-content .third-content-gift .gift-cart-button:hover {
   background-color: #ae4e0e;
+}
+.discover .main-content .third-content-gift .gift-cart-button:last-child {
+  margin-left: 58px;
 }
 .discover .main-content .forth-content {
   display: none;
